# benchmark_scripts

./: README.md  cpuflamegraph.sh  flamegraph.sh  install.sh  offcputime.sh  offwaketime.sh  pgbench_init.sh  run_offcputime.sh  wakeuptime.sh
flamegraph_scripts/: README.md  install.sh
monitoring_playground/: README.md  fetch_metrics.py  pyproject.toml
perf_scripts/: cpuflamegraph.sh  offwaketime.sh  wakeuptime.sh
pgbench_scripts/: README.md  custom_dist_func.sql  custom_func_ddl.sql  custom_tpcb.sql  gen_pgbench_script.py  instances.json  launch_pgbench_runs.sh  make_pgbench_ddl.sql  pgbench_custom.sql  pgbench_custom_same_query.sql  pgbench_dist.sql  pgbench_insert.sql  pgbench_select_custom.sql  pgbench_update.sql  process_pgbench_output.py  run_pgbench.sh  select_only.sql  show_configs.sql  simple_update.sql  tpcb_like.sql
